--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --passWithNoTests",
+    "prepare": "husky install"
   },
-  "keywords": [],
+  "keywords": [
+    "notification worker",
+    "email",
+    "SMS",
+    "Push notification"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.10.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-import-resolver-typescript": "^3.6.3",
@@ -22,15 +31,22 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.6.0",
+    "globals": "^15.9.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "tsyringe": "^4.8.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
