--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.10.0",
+    "@types/amqplib": "^0.10.5",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
@@ -54,6 +55,9 @@
     "typescript-eslint": "^8.5.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "amqplib": "^0.10.4",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.15",
+    "winston": "^3.14.2"
   }
 }
