--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.0",
