--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
+    "firebase-admin": "^12.4.0",
     "nodemailer": "^6.9.15",
     "winston": "^3.14.2"
   }
