--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notification-worker-node",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "startup.js",
   "scripts": {
     "build": "rimraf ./dist && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "dev": "nodemon -r tsconfig-paths/register src/startup.ts",
@@ -60,6 +60,7 @@
     "dotenv": "^16.4.5",
     "firebase-admin": "^12.4.0",
     "nodemailer": "^6.9.15",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
