--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
       "@web/*": ["./src/web/*"],
-      "@application/*": ["./src/application/*"],
+      "@abstractions/*": ["./src/abstractions/*"],
       "@infrastructure/*": ["./src/infrastructure/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
