--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "notification-worker-node",
   "version": "1.0.0",
-  "main": "startup.js",
+  "main": "dist/src/startup.js",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "build": "rimraf ./dist && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "dev": "nodemon -r tsconfig-paths/register src/startup.ts",
